# cursor-mcp-bridge

./: .gitignore  README.md  cursor_runner.py  pyproject.toml  server.py  session_store.py
.cursor/: mcp.json
claude_agent_install/: cursor-delegator.md  installer.py  plan-with-cursor.md
