[project]
name = "cursor-agent-tool"
version = "0.1.0"
description = "MCP server exposing Cursor's agent CLI as tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2.4",
]

[project.scripts]
cursor-agent-mcp = "server:mcp.run"
claude-agent-install = "claude_agent_install.installer:main"

[tool.setuptools]
py-modules = ["server", "agent_runner", "session_store"]
packages = ["claude_agent_install"]

[tool.setuptools.package-data]
claude_agent_install = ["*.md"]
